Refactored feature details

--- a/ui/ui_feature_details.ui
+++ b/ui/ui_feature_details.ui
@@ -148,6 +148,7 @@
          <height>221</height>
         </rect>
        </property>
+       <layout class="QVBoxLayout" name="verticalLayout_2"/>
       </widget>
      </widget>
     </item>
