--- a/ui/ui_view_str.ui
+++ b/ui/ui_view_str.ui
@@ -130,22 +130,26 @@
             </layout>
            </item>
            <item>
-            <widget class="QTreeView" name="tvSTRResults">
-             <property name="editTriggers">
-              <set>QAbstractItemView::NoEditTriggers</set>
+            <widget class="QScrollArea" name="tree_scrollArea">
+             <property name="frameShape">
+              <enum>QFrame::NoFrame</enum>
              </property>
-             <property name="alternatingRowColors">
+             <property name="frameShadow">
+              <enum>QFrame::Plain</enum>
+             </property>
+             <property name="widgetResizable">
               <bool>true</bool>
              </property>
-             <property name="rootIsDecorated">
-              <bool>true</bool>
-             </property>
-             <attribute name="headerCascadingSectionResizes">
-              <bool>false</bool>
-             </attribute>
-             <attribute name="headerDefaultSectionSize">
-              <number>0</number>
-             </attribute>
+             <widget class="QWidget" name="scrollAreaWidgetContents">
+              <property name="geometry">
+               <rect>
+                <x>0</x>
+                <y>0</y>
+                <width>424</width>
+                <height>85</height>
+               </rect>
+              </property>
+             </widget>
             </widget>
            </item>
           </layout>
@@ -209,7 +213,7 @@
              <x>0</x>
              <y>0</y>
              <width>486</width>
-             <height>440</height>
+             <height>333</height>
             </rect>
            </property>
            <attribute name="label">
@@ -227,7 +231,7 @@
              <x>0</x>
              <y>0</y>
              <width>486</width>
-             <height>440</height>
+             <height>326</height>
             </rect>
            </property>
            <attribute name="label">
