Added a VDC/Ward filter when adding a parcel layer

--- a/ui/ui_options.ui
+++ b/ui/ui_options.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>626</width>
-    <height>600</height>
+    <height>583</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -40,7 +40,7 @@
         <x>0</x>
         <y>0</y>
         <width>608</width>
-        <height>545</height>
+        <height>528</height>
        </rect>
       </property>
       <layout class="QGridLayout" name="gridLayout_5">
@@ -227,6 +227,16 @@
             </size>
            </property>
           </widget>
+         </item>
+         <item row="2" column="0">
+          <widget class="QLabel" name="vdclabel">
+           <property name="text">
+            <string>VDC Codes</string>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="1">
+          <widget class="QLineEdit" name="edtVdc"/>
          </item>
         </layout>
        </item>
