--- a/ui/ui_geoodk_converter.ui
+++ b/ui/ui_geoodk_converter.ui
@@ -13,8 +13,55 @@
   <property name="windowTitle">
    <string>GeoODK Form Generator</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout_4">
-   <item row="5" column="1">
+  <layout class="QVBoxLayout" name="verticalLayout">
+   <item>
+    <layout class="QVBoxLayout" name="vlnotification"/>
+   </item>
+   <item>
+    <widget class="QLabel" name="label_3">
+     <property name="text">
+      <string>Select entities that will be exported to generated GeoODK form</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <layout class="QFormLayout" name="formLayout">
+     <property name="fieldGrowthPolicy">
+      <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
+     </property>
+     <property name="horizontalSpacing">
+      <number>200</number>
+     </property>
+     <item row="0" column="0">
+      <widget class="QCheckBox" name="chk_all">
+       <property name="text">
+        <string>Check all</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QPushButton" name="btnShowOutputFolder">
+       <property name="text">
+        <string>Open output folder ...</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item>
+    <widget class="QTreeView" name="trentities"/>
+   </item>
+   <item>
+    <widget class="QCheckBox" name="ck_social_tenure">
+     <property name="text">
+      <string>Enable definition of social tenure relationship...</string>
+     </property>
+     <property name="checked">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item>
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -24,36 +71,6 @@
      </property>
      <property name="centerButtons">
       <bool>false</bool>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="0" colspan="2">
-    <widget class="QTreeView" name="trentities"/>
-   </item>
-   <item row="1" column="0" colspan="2">
-    <widget class="QLabel" name="label_3">
-     <property name="text">
-      <string>Select entities that will be exported to generated GeoODK form</string>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="0" colspan="2">
-    <widget class="QCheckBox" name="chk_all">
-     <property name="text">
-      <string>Check all</string>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="0" colspan="2">
-    <layout class="QVBoxLayout" name="vlnotification"/>
-   </item>
-   <item row="4" column="0" colspan="2">
-    <widget class="QCheckBox" name="ck_social_tenure">
-     <property name="text">
-      <string>Enable definition of social tenure relationship...</string>
-     </property>
-     <property name="checked">
-      <bool>true</bool>
      </property>
     </widget>
    </item>
