--- a/ui/composer/ui_composer_spcolumn_styler.ui
+++ b/ui/composer/ui_composer_spcolumn_styler.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>334</width>
-    <height>366</height>
+    <width>1364</width>
+    <height>900</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -26,8 +26,8 @@
       <attribute name="title">
        <string>General</string>
       </attribute>
-      <layout class="QGridLayout" name="gridLayout_2">
-       <item row="0" column="0">
+      <layout class="QVBoxLayout" name="verticalLayout_2">
+       <item>
         <widget class="QGroupBox" name="groupBox">
          <property name="title">
           <string>Legend Label:</string>
@@ -65,31 +65,37 @@
          </layout>
         </widget>
        </item>
-       <item row="1" column="0">
+       <item>
         <widget class="QGroupBox" name="groupBox_2">
          <property name="title">
           <string>Feature Zoom:</string>
          </property>
-         <layout class="QVBoxLayout" name="verticalLayout_2">
-          <property name="bottomMargin">
-           <number>15</number>
-          </property>
-          <item>
-           <widget class="QLabel" name="label">
+         <layout class="QGridLayout" name="gridLayout_4">
+          <item row="0" column="0">
+           <widget class="QRadioButton" name="rb_relative_zoom">
             <property name="text">
-             <string>Specify the zoom out level of the feature relative to the fulll extent of the map</string>
+             <string>Zoom relative to the full map extents</string>
             </property>
-            <property name="wordWrap">
+            <property name="checked">
+             <bool>false</bool>
+            </property>
+            <property name="autoExclusive">
              <bool>true</bool>
             </property>
            </widget>
           </item>
-          <item>
+          <item row="0" column="1">
            <widget class="QDoubleSpinBox" name="sb_zoom">
             <property name="minimumSize">
              <size>
               <width>0</width>
               <height>32</height>
+             </size>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>300</width>
+              <height>16777215</height>
              </size>
             </property>
             <property name="maximum">
@@ -100,10 +106,39 @@
             </property>
            </widget>
           </item>
+          <item row="1" column="0">
+           <widget class="QRadioButton" name="rb_fixed_scale">
+            <property name="text">
+             <string>Fixed scale</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="1">
+           <widget class="QSpinBox" name="sb_fixed_zoom">
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>32</height>
+             </size>
+            </property>
+            <property name="prefix">
+             <string>1:</string>
+            </property>
+            <property name="maximum">
+             <number>1000000</number>
+            </property>
+            <property name="singleStep">
+             <number>500</number>
+            </property>
+            <property name="value">
+             <number>1000</number>
+            </property>
+           </widget>
+          </item>
          </layout>
         </widget>
        </item>
-       <item row="2" column="0">
+       <item>
         <spacer name="verticalSpacer">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
@@ -111,7 +146,7 @@
          <property name="sizeHint" stdset="0">
           <size>
            <width>20</width>
-           <height>72</height>
+           <height>485</height>
           </size>
          </property>
         </spacer>
@@ -133,8 +168,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>282</width>
-            <height>292</height>
+            <width>1284</width>
+            <height>787</height>
            </rect>
           </property>
           <layout class="QGridLayout" name="gridLayout_5">
