--- a/ui/ui_login.ui
+++ b/ui/ui_login.ui
@@ -17,7 +17,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>STDM Login</string>
+   <string>Login</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_2">
    <item row="3" column="1">
