--- a/ui/flts/ui_first_examination.ui
+++ b/ui/flts/ui_first_examination.ui
@@ -19,6 +19,9 @@
   <property name="windowTitle">
    <string>First Examination</string>
   </property>
+  <property name="wizardStyle">
+   <enum>QWizard::ModernStyle</enum>
+  </property>
   <widget class="QWizardPage" name="wizardPage1">
    <layout class="QGridLayout" name="gridLayout_2">
     <item row="0" column="0">
