--- a/ui/flts/ui_third_examination.ui
+++ b/ui/flts/ui_third_examination.ui
@@ -13,6 +13,9 @@
   <property name="windowTitle">
    <string>Third Examination</string>
   </property>
+  <property name="wizardStyle">
+   <enum>QWizard::ModernStyle</enum>
+  </property>
   <widget class="QWizardPage" name="wizardPage2">
    <layout class="QGridLayout" name="gridLayout">
     <item row="0" column="0">
